code pipeline test complete

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container" style="max-width: 720px; margin-top: 10px;">
         <div class= "header">
-        <h1>Smart Search Photo Album - Test</h1>
+        <h1>Smart Search Photo Album</h1>
         </div>
         <hr/>
 
